[project]
name = "incidentbench"
version = "1.0.0"
description = "Adversarial On-Call OpenEnv Environment"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115.5",
    "uvicorn[standard]>=0.35.0",
    "pydantic>=2.10.3",
    "openai>=2.7.2",
    "pyyaml==6.0.2",
    "requests==2.32.3",
    "openenv-core>=0.2.0",
]

[project.scripts]
server = "server.app:main"

[tool.openenv]
name = "IncidentBench"
version = "1.0.0"